--- a/setup.cfg
+++ b/setup.cfg
@@ -1,29 +1,12 @@
-[bumpversion]
-current_version = 0.22.1
-commit = True
-tag = True
-parse = (?P<major>\d+)
-	\.(?P<minor>\d+)
-	\.(?P<patch>\d+)
-	(?P<release>[a]*)(?P<num>\d*)
-serialize = 
-	{major}.{minor}.{patch}{release}{num}
-	{major}.{minor}.{patch}
-tag_name = {new_version}
-
 [metadata]
 name = cobra
-url = https://opencobra.github.io/cobrapy
-download_url = https://pypi.org/project/cobra
-project_urls = 
-	Source Code = https://github.com/opencobra/cobrapy
-	Documentation = https://cobrapy.readthedocs.io
-	Bug Tracker = https://github.com/opencobra/cobrapy/issues
-author = The cobrapy core development team.
-author_email = cobra-pie@googlegroups.com
-maintainer = Moritz E. Beber
-maintainer_email = moritz.beber@gmail.com
-classifiers = 
+url = https://github.com/TwoNull/cobrapy
+download_url = https://github.com/TwoNull/cobrapy
+project_urls =
+	Source Code = https://github.com/TwoNull/cobrapy
+author = Leo Glass
+author_email = leo@nullptrs.co
+classifiers =
 	Development Status :: 5 - Production/Stable
 	Intended Audience :: Science/Research
 	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
@@ -39,7 +22,7 @@ license = LGPL-2.0-or-later OR GPL-2.0-or-later
 description = COBRApy is a package for constraint-based modeling of metabolic networks.
 long_description = file: README.rst, INSTALL.rst
 long_description_content_type = text/x-rst
-keywords = 
+keywords =
 	metabolism
 	biology
 	constraint-based
@@ -51,39 +34,39 @@ keywords =
 
 [options]
 zip_safe = True
-install_requires = 
+install_requires =
 	appdirs ~=1.4
 	depinfo
 	diskcache ~=5.0
 	future
 	httpx ~=0.14
 	importlib_resources
-	numpy ~=1.13
-	optlang ~=1.5
+	numpy <=1.22
+	optlang @ git+https://github.com/TwoNull/optlang.git
 	pandas ~=1.0
 	pydantic ~=1.6
 	python-libsbml ==5.19.0
 	rich >=8.0
 	ruamel.yaml ~=0.16
 	swiglpk
-tests_require = 
+tests_require =
 	tox
 packages = find:
-package_dir = 
+package_dir =
 	= src
 
 [options.packages.find]
 where = src
 
 [options.package_data]
-cobra = 
+cobra =
 	io/*.json
 	test/data/*
 
 [options.extras_require]
-array = 
+array =
 	scipy
-development = 
+development =
 	black
 	bumpversion
 	isort
@@ -95,7 +78,7 @@ universal = 1
 [bumpversion:part:release]
 optional_value = placeholder
 first_value = placeholder
-values = 
+values =
 	placeholder
 	a
 
